--- a/resources/stylesheets/application/stylesheet.css
+++ b/resources/stylesheets/application/stylesheet.css
@@ -175,7 +175,7 @@ h4 {font-size: 18px; font-weight: normal;}
 	float: left;
 	width: 167px;
 	text-align:center;
-	margin-bottom:10px;
+	margin: 10px 15px;
 }
 #content #col2 .boxProduto a {
 	text-decoration:none;
@@ -227,8 +227,8 @@ h4 {font-size: 18px; font-weight: normal;}
 }
 
 .jcarousel-skin-tango .jcarousel-container-horizontal {
-    width: 245px;
-    padding: 0 40px;
+/*    width: 245px; */
+    padding: 0 40px; 
 }
 
 .jcarousel-skin-tango .jcarousel-container-vertical {
@@ -242,8 +242,8 @@ h4 {font-size: 18px; font-weight: normal;}
 }
 
 .jcarousel-skin-tango .jcarousel-clip-horizontal {
-    width:  245px;
-    height: 75px;
+/*    width:  245px;*/
+/*    height: 75px; */
 }
 
 .jcarousel-skin-tango .jcarousel-clip-vertical {
@@ -252,8 +252,8 @@ h4 {font-size: 18px; font-weight: normal;}
 }
 
 .jcarousel-skin-tango .jcarousel-item {
-    width: 75px;
-    height: 75px;
+    /*width: 75px;*/
+    /*height: 75px;*/
 }
 
 .jcarousel-skin-tango .jcarousel-item-horizontal {
