--- a/resources/stylesheets/application/stylesheet.css
+++ b/resources/stylesheets/application/stylesheet.css
@@ -14,7 +14,7 @@ address, th {font-style:normal;font-weight:normal;}
 table {border-collapse:collapse;border-spacing:0;}
 caption, th {text-align:left;}
 img, fieldset {border:none;}
-legend, hr {border:none; visibility:hidden;}
+legend, hr {border:none; visibility:hidden;display:none;}
 ol, ul {list-style:none;}
 p a {color:#F60;bottom: 0; text-decoration:underline;}
 p a:hover {color:#F90;}
@@ -53,7 +53,7 @@ h4 {font-size: 18px; font-weight: normal;}
 	background-repeat: no-repeat;
 	font-size:13px;
 	border-top-color: #CCC;
-	border-right-color: #CCC;
+	border-right-color: #999;
 	border-bottom-color: #999;
 	border-left-color: #CCC;
 	color:#666;
@@ -104,6 +104,28 @@ h4 {font-size: 18px; font-weight: normal;}
 	color:#999;
 	padding:6px 6px 6px 25px;
 }
+
+#top h1{
+	display:block;
+	width:300px;
+	float:left;
+}
+
+#top #logado{
+	display:block;
+	width:400px;
+	padding:60px 0 0 10px;
+}
+
+#top #formBusca{
+	background-color:#CCC;
+	display:block;
+	padding:5px;
+	border-radius: 4px 4px 4px 4px;
+	border-bottom: solid 1px #999;
+	border-right: solid 1px #999;
+}
+
 
 /** CONTENT **/
 #content #alertBanner a {
@@ -242,8 +264,8 @@ h4 {font-size: 18px; font-weight: normal;}
 }
 
 .jcarousel-skin-tango .jcarousel-clip-horizontal {
-/*    width:  245px;*/
-/*    height: 75px; */
+/*  width:  245px;*/
+/*  height: 75px; */
 }
 
 .jcarousel-skin-tango .jcarousel-clip-vertical {
@@ -252,8 +274,8 @@ h4 {font-size: 18px; font-weight: normal;}
 }
 
 .jcarousel-skin-tango .jcarousel-item {
-    /*width: 75px;*/
-    /*height: 75px;*/
+/*	width: 75px;*/
+/*	height: 75px;*/
 }
 
 .jcarousel-skin-tango .jcarousel-item-horizontal {
