--- a/resources/stylesheets/application/stylesheet.css
+++ b/resources/stylesheets/application/stylesheet.css
@@ -79,9 +79,17 @@ h4 {font-size: 18px; font-weight: normal;}
 .btVenda {float: right;}
 .linkProduto{
 	color:#2C4976;
-	font-weight: bold;
+	font-size:10px;
 }
-.precoProduto{color:#98233B;}
+.tituloOferta{
+	font-size:1.4em;
+	font-weight:bold;
+}
+.precoProduto{
+	color:#98233B;
+	text-transform:uppercase;
+	font-weight:bold;
+}
 
 /** COMEÇA HEADER ***/
 /** Formatação do bloco central **/
