--- a/resources/stylesheets/application/stylesheet.css
+++ b/resources/stylesheets/application/stylesheet.css
@@ -24,6 +24,14 @@ h3 {font-size: 24px; font-weight: normal;}
 h4 {font-size: 18px; font-weight: normal;}
 .txtPublicidade {font-size:9px;}
 
+.termosProduto{
+	border-top: 1px dotted #999999;
+    color: #666666;
+    padding: 10px 0;
+    width: 100%;
+	}
+.termosProduto li {color: #666666; font-size: 10px;}
+
 /** Botões **/
 .button {
 	-moz-border-image: none;
