--- a/resources/stylesheets/application/stylesheet.css
+++ b/resources/stylesheets/application/stylesheet.css
@@ -38,7 +38,7 @@ h4 {font-size: 18px; font-weight: normal;}
 	-moz-border-left-colors: none;
 	-moz-border-right-colors: none;
 	-moz-border-top-colors: none;
-	border-radius: 4px 4px 4px 4px;
+	border-radius: 3px;
 	border-style: solid;
 	border-width: 1px;
 	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
