--- a/resources/stylesheets/application/stylesheet.css
+++ b/resources/stylesheets/application/stylesheet.css
@@ -22,6 +22,12 @@ h1 {font-size: 30px; font-weight: normal;}
 h2 {font-size: 28px; font-weight: normal;}
 h3 {font-size: 24px; font-weight: normal;}
 h4 {font-size: 18px; font-weight: normal;}
+
+.linha-separadora-trends {
+    border-top: 1px solid #DDDDDD;
+	margin: 30px 0;
+}
+
 .txtPublicidade {font-size:9px;}
 
 .termosProduto{
@@ -182,6 +188,7 @@ h4 {font-size: 18px; font-weight: normal;}
 }
 #content #col2 #boxGrupo {
 	border: 1px solid #E1DCCE;
+	border-top: 2px solid #E75631;
 	clear: both;
 	display: inline-block;
 	margin-top: 10px;
