--- a/resources/stylesheets/application/stylesheet.css
+++ b/resources/stylesheets/application/stylesheet.css
@@ -24,8 +24,10 @@ h3 {font-size: 24px; font-weight: normal;}
 h4 {font-size: 18px; font-weight: normal;}
 
 .linha-separadora-trends {
-    border-top: 1px solid #DDDDDD;
 	margin: 30px 0;
+	border-top-width: 1px;
+	border-top-style: dotted;
+	border-top-color: #DDDDDD;
 }
 
 .txtPublicidade {font-size:9px;}
@@ -35,7 +37,8 @@ h4 {font-size: 18px; font-weight: normal;}
     color: #666666;
     padding: 10px 0;
     width: 100%;
-	}
+}
+
 .termosProduto li {color: #666666; font-size: 10px;}
 
 /** Botões **/
@@ -186,7 +189,8 @@ h4 {font-size: 18px; font-weight: normal;}
 	display:block;
 	float:left;
 }
-#content #col2 #boxGrupo {
+
+#boxGrupo{
 	border: 1px solid #E1DCCE;
 	border-top: 2px solid #E75631;
 	clear: both;
@@ -195,6 +199,7 @@ h4 {font-size: 18px; font-weight: normal;}
 	padding: 15px;
 	border-radius:3px 3px 3px 3px;
 }
+
 #content #col2 #boxGrupo div {
 	display:block;
 	float:left;
@@ -483,7 +488,7 @@ h4 {font-size: 18px; font-weight: normal;}
 #offer_details ul li {
 	display:block;
 	float:left;
-	width:258px;
+	width:252px;
 	padding:5px 10px;
 	border-bottom:solid 1px #CCC;
 }
@@ -491,6 +496,14 @@ h4 {font-size: 18px; font-weight: normal;}
 	display:block;
 	width:110px;
 	float:left;
+}
+.offer_description, .offer_consideration{
+	display:block;
+	background-color: #f6f4f0;
+	padding:10px;
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: #edeae2;
 }
 
 /* Login - Minha Conta */
